# Bangumi-Rules-Builder

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EDITOR_README.md  LICENSE  README.md  compare_files.py  pyproject.toml  qb_download_rules.json  qb_rule_editor.py  run_editor.bat  run_editor.ps1  tasks.json  validate_workflow.py
.github/workflows/: ci.yml  release.yml
src/: logger.rs  main.rs  models.rs  utils.rs
src/ai/: mod.rs
src/ai/deepseek/: mod.rs
src/ai/object_matcher/: matcher.rs  mod.rs  types.rs  utils.rs
src/meta_providers/bangumi/: mod.rs
src/rules/: mod.rs
src/rules/q_bittorrent/: mod.rs
src/sites/: kansou.rs  mod.rs
