[package]
name = "bangumi-rules-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.19"
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"

[[bin]]
name = "bangumi-rules-builder"
path = "src/main.rs"

